# frank-reader

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC-IMPL.md  SPEC.md  pyproject.toml
.claude/agents/: worker.md
.github/workflows/: ci.yml
scripts/: m0_check.py
src/frank_reader/: cli.py  config.py  main.py  storage.py
src/frank_reader/adapters/: __init__.py  _pseudopage.py  base.py  docx.py  image.py  pdf.py  plaintext.py  url.py
src/frank_reader/pipeline/: llm_client.py  orchestrator.py  prompts.py  schema.py
src/frank_reader/render/: html.py  pdf.py
src/frank_reader/static/: index.html
tests/: conftest.py  test_adapters.py  test_api.py  test_integration_llm.py  test_llm_client.py  test_orchestrator.py  test_prompts.py  test_render.py  test_schema.py  test_storage.py
